fix layout issues and make website responsive for mobile

--- a/fudcon.fedoraproject.org/static/css/fudcon.css
+++ b/fudcon.fedoraproject.org/static/css/fudcon.css
@@ -16,14 +16,20 @@ body {
 }
 
 .fill {
-  background-image:url(http://fudcon.fedoraproject.org/static/images/splash_bg.png);
-  background-repeat: repeat-x;
+  background: rgb(255,255,255); /* Old browsers */
+  background: -moz-linear-gradient(center top , #FFFFFF 1%, #FFFFFF 36%, #AAAAAA 100%) repeat scroll 0 0 transparent;
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(1%,rgba(255,255,255,1)), color-stop(36%,rgba(255,255,255,1)), color-stop(100%,rgba(170,170,170,1))); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top,  rgba(255,255,255,1) 1%,rgba(255,255,255,1) 36%,rgba(170,170,170,1) 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top,  rgba(255,255,255,1) 1%,rgba(255,255,255,1) 36%,rgba(170,170,170,1) 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top,  rgba(3255,255,255,1) 1%,rgba(255,255,255,1) 36%,rgba(170,170,170,1) 100%); /* IE10+ */
+  background: linear-gradient(top,  rgba(3255,255,255,1) 1%,rgba(255,255,255,1) 36%,rgba(170,170,170,1) 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#FFFFFF', endColorstr='#AAAAAA',GradientType=0 ); /* IE6-9 */
   border-bottom-color:#999999;
   border-bottom-style:solid;
   border-bottom-width:thin;
   margin-top:0;
   width:100%;
-  height: 282px;
+  height: auto;
   color:#729FCF;
   font-style:normal;
   font-variant:normal;
@@ -55,9 +61,8 @@ a.button_big {
 }
 
 .splash_img {
-  float:right;
-  height:342px;
-  margin-top: 5px;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .logo_img {
@@ -72,15 +77,16 @@ a.button_big {
 
 #slider {
   width: 620px; /* important to be same as image width */
-  height: 250px; /* important to be same as image height */
+  height: 259px; /* important to be same as image width */
   position: relative; /* important */
 	overflow: hidden; /* important */
+  float: left;
+  padding: 10px 0;
 }
 #sliderContent {
   width: 620px; /* important to be same as image width or wider */
-  position: absolute;
-	top: 20px;
-	margin-left: 0;
+  margin-right: auto;
+	margin-left: auto;
 }
 .sliderImage {
   float: left;
